--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
 
 
-    <div class="container bg-info-subtle rounded-5">
+    <div class="container rounded-5">
 
         <div class="row p-2">
 
